--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <script type="text/javascript">
 
-	var map = L.map('map').fitBounds([[28.53442668415177,-18.008609147328702],[28.702833084702238,-17.735394726552887]], 2);
+	var map = L.map('map').setView([28.61622119867559, -17.895829137887272], 14);
 
 	var grayscale = L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
 		maxZoom: 20,
