--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<title>Cultivos afectados por la colada lávica - La Palma </title>
 
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
 	
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
@@ -82,7 +84,7 @@
 
 <script type="text/javascript">
 
-	var map = L.map('map').fitBounds([[28.53442668415177,-18.008609147328702],[28.702833084702238,-17.735394726552887]], 2);
+	var map = L.map('map').setView([28.61622119867559, -17.895829137887272], 14);
 
 	var grayscale = L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
 		maxZoom: 20,
@@ -210,7 +212,7 @@
 	map.attributionControl.addAttribution('Perímetro colada &copy; <a href="https://emergency.copernicus.eu/mapping/list-of-components/EMSR546"> Copernicus EMS</a>');
 
 	// Añadir leyenda
-	var legend = L.control({position: 'bottomright'});
+	var legend = L.control({position: 'bottomright', minimized: false});
     legend.onAdd = function (map) {
 
     var div = L.DomUtil.create('div', 'info legend');
