--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 			<!-- Nav tabs -->
 			<div class="sidebar-tabs">
 				<ul role="tablist">
-					<li><a href="#home" role="tab"><i class="fa fa-bars"></i></a></li>
-					<li class="disabled"><a href="#messages" role="tab"><i class="fa fa-minus"></i></a></li>
-					<li><a href="https://twitter.com/NestorAHdez" role="tab" target="_blank"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/nestorarmashdez/" role="tab" target="_blank"><i class="fa fa-linkedin"></i></a> </li>
+					<li><a href="#home" role="tab"><i class="fas fa-bars"></i></a></li>
+					<li class="disabled"><i class="fas fa-minus"></i></a></li>
+					<li><a href="https://twitter.com/NestorAHdez" role="tab" target="_blank"><i class="fab fa-twitter"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/nestorarmashdez/" role="tab" target="_blank"><i class="fab fa-linkedin-in"></i></a> </li>
 				</ul>
 	
 			</div>
