--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="plugin/Leaflet.Control.Opacity/dist/L.Control.Opacity.css" rel="stylesheet" />
 	<link rel="stylesheet" href="Leaflet.Control.Opacity-master/docs/css/style.css">
 	
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/fontawesome-free-5.15.4-web/css/all.css">
 	<link rel="stylesheet" href="Leaflet.SlideMenu-master/src/L.Control.SlideMenu.css">
 	<script src="Leaflet.SlideMenu-master/src/L.Control.SlideMenu.js"></script>
 
@@ -104,10 +104,10 @@
 			<!-- Nav tabs -->
 			<div class="sidebar-tabs">
 				<ul role="tablist">
-					<li><a href="#home" role="tab"><i class="fa fa-bars"></i></a></li>
-					<li class="disabled"><a href="#messages" role="tab"><i class="fa fa-minus"></i></a></li>
-					<li><a href="https://twitter.com/NestorAHdez" role="tab" target="_blank"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/nestorarmashdez/" role="tab" target="_blank"><i class="fa fa-linkedin"></i></a> </li>
+					<li><a href="#home" role="tab"><i class="fas fa-bars"></i></a></li>
+					<li class="disabled"><i class="fas fa-minus"></i></a></li>
+					<li><a href="https://twitter.com/NestorAHdez" role="tab" target="_blank"><i class="fab fa-twitter"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/nestorarmashdez/" role="tab" target="_blank"><i class="fab fa-linkedin-in"></i></a> </li>
 				</ul>
 	
 			</div>
