--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
     <link href="plugin/Leaflet.Control.Opacity/dist/L.Control.Opacity.css" rel="stylesheet" />
 	<link rel="stylesheet" href="Leaflet.Control.Opacity-master/docs/css/style.css">
 	
-	<link rel="stylesheet" href="/fontawesome-free-5.15.4-web/css/all.css">
+	<link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
 	<link rel="stylesheet" href="Leaflet.SlideMenu-master/src/L.Control.SlideMenu.css">
-	<script src="Leaflet.SlideMenu-master/src/L.Control.SlideMenu.js"></script>
 
 	<link rel="stylesheet" href="sidebar-v2-master/css/leaflet-sidebar.css">
 	<script src="sidebar-v2-master/js/leaflet-sidebar.js"></script>
@@ -105,7 +104,7 @@
 			<div class="sidebar-tabs">
 				<ul role="tablist">
 					<li><a href="#home" role="tab"><i class="fas fa-bars"></i></a></li>
-					<li class="disabled"><i class="fas fa-minus"></i></a></li>
+					<li class="disabled"><a href="#minus" role="tab"></i></a></li>
 					<li><a href="https://twitter.com/NestorAHdez" role="tab" target="_blank"><i class="fab fa-twitter"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/nestorarmashdez/" role="tab" target="_blank"><i class="fab fa-linkedin-in"></i></a> </li>
 				</ul>
@@ -117,7 +116,7 @@
 				<div class="sidebar-pane" id="home">
 					<h1 class="sidebar-header">
 						Cultivos afectados por la colada lávica
-						<span class="sidebar-close"><i class="fa fa-chevron-left"></i></span>
+						<span class="sidebar-close"><i class="fas fa-chevron-left"></i></span>
 					</h1>
 					
 					<p class="texto"><h4>Información</h4></p>
@@ -139,7 +138,6 @@
 					</p>
 				<p class="pie"><strong>Autor: </strong>Néstor Armas Hernández</p>
 				</div>
-
 			</div>
 		</div>
 		
