--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <link href="plugin/Leaflet.Control.Opacity/dist/L.Control.Opacity.css" rel="stylesheet" />
 	<link rel="stylesheet" href="Leaflet.Control.Opacity-master/docs/css/style.css">
 	
-	<link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
-	<link rel="stylesheet" href="Leaflet.SlideMenu-master/src/L.Control.SlideMenu.css">
-
 	<link rel="stylesheet" href="sidebar-v2-master/css/leaflet-sidebar.css">
 	<script src="sidebar-v2-master/js/leaflet-sidebar.js"></script>
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/js/all.min.js" integrity="sha512-cyAbuGborsD25bhT/uz++wPqrh5cqPh1ULJz4NSpN9ktWcA6Hnh9g+CWKeNx2R0fgQt+ybRXdabSBgYXkQTTmA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<style>
 		html, body {
